--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-simple-typewriter": "^5.0.1",
     "react-social-icons": "^5.15.0",
     "react-tilt": "^0.1.4",
+    "react-toastify": "^9.1.2",
     "react-vertical-timeline-component": "^3.6.0",
     "three": "^0.150.1"
   },
